Fixes icon alignment issues on Outlook

--- a/public/styles/email.css
+++ b/public/styles/email.css
@@ -40,6 +40,10 @@
     padding-left: 15px
 }
 
+.pl-5px {
+    padding-left: 5px;
+}
+
 .pl-20 {
     padding-left: 20px
 }
@@ -51,4 +55,25 @@
 .social-row {
     padding-top: 15px;
     padding-bottom: 5px;
+}
+
+.v-align {
+    vertical-align:middle;
+    font-size: 0;
+}
+
+.icon-sm {
+    border: none;
+    width: 25px;
+    max-width: 25px !important;
+    height: 25px;
+    max-height: 25px !important;
+}
+
+.table-reset {
+    background: none; 
+    border-width: 0px; 
+    border: 0px; 
+    margin: 0; 
+    padding: 0;
 }
